# Maid

./: .gitignore  Cargo.toml  Justfile  README.md  barecc.sh
benches/: simple_decode.rs
data/: add.c
maid/: Cargo.toml
maid-codec/: Cargo.toml
maid-codec/src/: instruction.rs  lib.rs  tests.rs  utils.rs
maid-codec/src/arm64/: block.rs  decoder.rs  mod.rs  tests.rs
maid-codec/src/arm64/detail/: data_processing_imm.rs  loads_and_stores.rs  mod.rs  reserved.rs
maid-jit/: Cargo.toml
maid-jit/src/: backend.rs  jit.rs  lib.rs
maid-jit/src/backends/: mod.rs
maid-jit/src/backends/arm/: mod.rs
maid-jit/src/backends/mips/: mod.rs
maid-jit/src/backends/riscv/: mod.rs
maid-jit/src/backends/x86/: mod.rs
maid-utils/: Cargo.toml
maid-utils/src/: block.rs  lib.rs  tests.rs  utils.rs
maid-vm/: Cargo.toml
maid-vm/src/: lib.rs
maid/lib/: args.rs  lib.rs
maid/lib/actions/: enumerate.rs
maid/src/: main.rs
md/: FEATURES-TODO.md  README.md
misc/: barecc.sh
misc/bins/: add2.c
src/: main.rs
