[package]
name = "maid"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[dependencies]
maid-codec = { path = "packages/maid-codec" }

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true

[workspace]
members = ["packages/*"]

[workspace.dependencies]
static_assertions = "1.1.0"

[[bench]]
name = "simple_decode"
harness = false
