[package]
name = "maidvm"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "maidvm"
path = "src/main.rs"

[workspace]
members = ["packages/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
maidness = { path = "packages/maidness" }
